<resources>
    <string name="app_name">Eratani</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="tv_status">Status Here</string>
    <string name="tv_name">Name Here</string>
    <string name="no_hp">No. Hp</string>
    <string name="tv_no_hp">No. Hp Here</string>
    <string name="alamat">Alamat</string>
    <string name="tv_alamat">Alamat Here</string>
    <string name="tv_item_name">Jamur ABC</string>
    <string name="tv_item_amount">9</string>
    <string name="unit">Kg</string>
    <string name="tv_item_cultivator">Cultivator Username</string>
    <string name="tv_item_temp">29.8</string>
    <string name="tv_item_humid">68.1</string>
    <string name="tv_text_panen">Panen dalam (hari)</string>
    <string name="tv_panen">11</string>
    <string name="tv_text_grafik">Grafik Suhu dan Kelembapan</string>
</resources>