<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/lin_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="?attr/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingBottom="30dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/username"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:layout_below="@id/lin_profile">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/tv_status"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/tv_name"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toStartOf="@id/text_name"/>

        <TextView
            android:id="@+id/text_no_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/no_hp"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_ho_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:text="@string/tv_no_hp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"/>

        <TextView
            android:id="@+id/text_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            app:layout_constraintTop_toBottomOf="@id/text_no_hp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tv_alamat"
            android:minLines="1"
            android:maxLines="3"
            app:layout_constraintTop_toBottomOf="@id/tv_ho_hp"
            app:layout_constraintStart_toStartOf="@id/tv_ho_hp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>