<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="start"
            android:minLines="1"
            android:maxLines="2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="@string/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_alamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:paddingBottom="12dp"
            android:ellipsize="end"
            android:gravity="start"
            android:minLines="1"
            android:maxLines="2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/tv_alamat" />

        <ImageView
            android:id="@+id/img_item_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_thermometer"
            app:layout_constraintStart_toStartOf="@+id/tv_item_alamat"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_alamat"/>

        <TextView
            android:id="@+id/tv_item_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_item_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_alamat"
            app:layout_constraintHorizontal_bias="0"
            tools:text="@string/tv_item_temp" />

        <ImageView
            android:id="@+id/img_item_humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_humidity"
            app:layout_constraintStart_toEndOf="@+id/tv_item_temp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_alamat"/>

        <TextView
            android:id="@+id/tv_item_humid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_item_humid"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_alamat"
            tools:text="@string/tv_item_humid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>